--- a/VectoCore/VectoCore.csproj
+++ b/VectoCore/VectoCore.csproj
@@ -122,12 +122,20 @@
     <Compile Include="Models\Connector\Ports\Impl\Response.cs" />
     <Compile Include="Models\Connector\Ports\IFvPort.cs" />
     <Compile Include="Models\Connector\Ports\ITnPort.cs" />
-    <Compile Include="Models\DeclarationData.cs" />
+    <Compile Include="Models\Declaration\DeclarationData.cs" />
     <Compile Include="Models\Declaration\LookupData.cs" />
-    <Compile Include="Models\Declaration\Rims.cs" />
-    <Compile Include="Models\Declaration\Wheels.cs" />
+    <Compile Include="Models\Declaration\Declaration.cs" />
+    <Compile Include="Models\Declaration\DeclarationWheels.cs" />
+    <Compile Include="Models\Declaration\Mission.cs" />
+    <Compile Include="Models\Declaration\MissionType.cs" />
+    <Compile Include="Utils\RessourceHelper.cs" />
+    <Compile Include="Models\Declaration\Segment.cs" />
+    <Compile Include="Models\Declaration\DeclarationSegments.cs" />
     <Compile Include="Models\SimulationComponent\Data\AuxiliaryCycleDataAdapter.cs" />
+    <Compile Include="Models\Declaration\Axle.cs" />
+    <Compile Include="Models\Declaration\AxleConfiguration.cs" />
     <Compile Include="Models\SimulationComponent\Data\CombustionEngineData.cs" />
+    <Compile Include="Models\SimulationComponent\Data\CrossWindCorrectionMode.cs" />
     <Compile Include="Models\SimulationComponent\Data\DrivingCycleData.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FuelConsumptionMap.cs" />
     <Compile Include="Models\SimulationComponent\Data\Engine\FullLoadCurve.cs" />
@@ -140,6 +148,7 @@
     <Compile Include="Models\SimulationComponent\Data\JsonDataHeader.cs" />
     <Compile Include="Models\SimulationComponent\Data\RetarderData.cs" />
     <Compile Include="Models\SimulationComponent\Data\RetarderLossMap.cs" />
+    <Compile Include="Models\Declaration\VehicleCategory.cs" />
     <Compile Include="Models\SimulationComponent\Data\VehicleData.cs" />
     <Compile Include="Models\SimulationComponent\Factories\DeclarationModeFactory.cs" />
     <Compile Include="Models\SimulationComponent\Factories\EngineeringModeFactory.cs" />
@@ -160,6 +169,7 @@
     <Compile Include="Models\SimulationComponent\Impl\Driver.cs" />
     <Compile Include="Models\SimulationComponent\Data\DriverData.cs" />
     <Compile Include="Utils\Formulas.cs" />
+    <Compile Include="Utils\IEnumberableExtensionMethods.cs" />
     <Compile Include="Utils\IntExtensionMethods.cs" />
     <Compile Include="Utils\Physics.cs" />
     <Compile Include="Utils\SI.cs" />
@@ -197,6 +207,7 @@
     <Compile Include="Models\Simulation\IVehicleContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DataRowExtensionMethods.cs" />
+    <Compile Include="Utils\StringExtensionMethods.cs" />
     <Compile Include="Utils\VectoCSVFile.cs" />
     <Compile Include="Utils\VectoMath.cs" />
     <Compile Include="Utils\DelauneyMap.cs" />
@@ -208,6 +219,16 @@
     <EmbeddedResource Include="Resources\Declaration\Rims.csv" />
     <EmbeddedResource Include="Resources\Declaration\Wheels.csv" />
     <EmbeddedResource Include="Resources\Declaration\SegmentTable.csv" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\HeavyUrban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Suburban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Urban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Coach.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Construction.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\Interurban.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\LongHaul.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\MunicipalUtility.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\RegionalDelivery.vdri" />
+    <EmbeddedResource Include="Resources\Declaration\MissionCycles\UrbanDelivery.vdri" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
